--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     </form>
 
     <div class="results">
-
-
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js "></script>
-    <script type="text/javascript " src="apps/app.js "></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+    </script>
+    <script type="text/javascript" src="apps/app.js"></script>
 </body>
 
 </html>
